# FetchCraft

./: .dockerignore  .env.example  .gitignore  AGENT_IMPLEMENTATION.md  AGENT_USAGE.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  Dockerfile  Dockerfile-gpu  EXAMPLES_UPDATED.md  FINAL_IMPLEMENTATION_REPORT.md  README.md  RETRIEVER_TOOL_UPDATE.md  RETRIEVER_USAGE.md  SUMMARY.md  SYMNODE_USAGE.md  TEST_SUITE_COMPLETE.md  TEST_SUITE_SETUP.md  VECTORINDEX_API_CHANGES.md  docker-compose.yaml  example.env  librechat.env.example  librechat.yaml-example  pyproject.toml  pytest.ini  test_basemodel_inheritance.py  verify_tests.py
.github/workflows/: python-package.yml
docs/: AGENT_USAGE.md  ASYNC_JOBS.md  BASEMODEL_INHERITANCE.md  CHROMA_VECTOR_STORE.md  CHUNKING_STRATEGIES.md  DOCUMENT_STORE_USAGE.md  ERROR_QUEUE.md  EVALUATION.md  FILE_GREP_TOOL.md  FILTERS_QUICKSTART.md  FILTER_CHEATSHEET.md  HIERARCHICAL_NODE_PARSER.md  HYBRID_DEMO_SUMMARY.md  HYBRID_SEARCH.md  HYBRID_SEARCH_QUICK_START.md  METADATA_FILTERS.md  OPENWEBUI_FORMATTER.md  POSTGRES_BACKEND.md  POSTGRES_QUICKSTART.md  README_NEW_API.md  RETRIEVER_USAGE.md  SYMNODE_USAGE.md  TEST_SUITE_COMPLETE.md  TEST_SUITE_SETUP.md  VECTORINDEX_API_CHANGES.md
fetchcraft-demos/fetchcraft-demo-mcp-server/: .env.example  README.md  pyproject.toml
fetchcraft-demos/fetchcraft-demo-mcp-server/src/fetchcraft/demo/mcp/: __init__.py  server.py  settings.py
fetchcraft-demos/fetchcraft-gradio-chatbot/: README.md  pyproject.toml
fetchcraft-demos/fetchcraft-gradio-chatbot/src/fetchcraft/demos/gradio/: app.py
fetchcraft-demos/fetchcraft-hybrid-search/: pyproject.toml
fetchcraft-demos/fetchcraft-hybrid-search/src/fetchcraft/demos/hybrid/: main.py  settings.py
fetchcraft-demos/fetchcraft-mcp-server/: README.md  pyproject.toml
fetchcraft-demos/fetchcraft-mcp-server/src/fetchcraft/mcp/: html_formatter.py  schema.py  server.py  settings.py
fetchcraft-demos/fetchcraft-openai-server/: Dockerfile  README.md  pyproject.toml
fetchcraft-demos/fetchcraft-openai-server/src/fetchcraft/demos/openai/: schema.py  server.py
fetchcraft-demos/fetchcraft-openapi-server/: .env.example  pyproject.toml
fetchcraft-demos/fetchcraft-openapi-server/src/fetchcraft/demos/openapi/: __init__.py  jinja_renderer.py  schema.py  server.py
fetchcraft-demos/fetchcraft-openapi-server/src/fetchcraft/demos/openapi/templates/: response.html
fetchcraft-demos/fetchcraft-simple/: pyproject.toml
fetchcraft-demos/fetchcraft-simple/src/fetchcraft/demos/hybrid/: main.py
src/demo/: __init__.py
src/demo/gradio_chatbot/: .env  .env.example  QUICKSTART.md  README.md  __init__.py  app.py  launch.sh  requirements.txt
src/demo/hybrid_demo/: README.md  __init__.py  run_demo.py
src/demo/openai_api_demo/: GETTING_STARTED.md  README.md  __init__.py  client_example.py  docker-compose.yml  open_ai_server.py  quickstart.sh  requirements.txt  server.py
src/demo/openapi_html_server/: open_api_html_server.py  openapi.json  openapi_server.py  render_response.py
src/demo/openapi_html_server/templates/: _citations.html  base.html
src/demo/openapi_server/: open_api_server.py  openapi_client_example.py  openapi_server.py
src/demo/simple_demo/: README.md  __init__.py  run_demo.py
src/examples/: README.md  agent_example.py  chroma_example.py  chunking_example.py  docling_source_example.py  document_processing_example.py  embeddings_example.py  evaluate_retriever.py  file_search_tool_example.py  file_tools_example.py  filter_example_chroma.py  hierarchical_parser_example.py  hierarchical_retrieval_example.py  hierarchical_retrieval_test.py  hybrid_search_example.py  multiple_indices_example.py  output_formatter_example.py  parser_docstore_example.py  parser_example.py  pdf_source_example.py  quick_hierarchy_test.py  recursive_splitting_example.py  retriever_example.py  simple_usage.py  symnode_example.py
src/examples/advanced/: arbitrary_object_index.py  recursive_object_retrieval.py
src/examples/evaluation/: evaluate_retriever.py  generate_dataset.py
src/examples/llama_index/: retriever_example.py
src/fetchcraft/: __init__.py  chunking.py  node.py  parser.py
src/fetchcraft/agents/: __init__.py  base.py  file_search_tool.py  memory.py  pydantic_agent.py  react_agent.py  retriever_tool.py  utils.py
src/fetchcraft/agents/output_formatters/: USAGE.md  base.py  default_formatter.py  html_formatter.py
src/fetchcraft/agents/tools/: __init__.py  file_grep_tool.py  file_search_tool.py
src/fetchcraft/document_store/: base.py  mongodb_store.py
src/fetchcraft/embeddings/: azure_openai.py  base.py
src/fetchcraft/evaluation/: README.md  __init__.py  dataset_generator.py  evaluator.py
src/fetchcraft/index/: base.py  vector_index.py
src/fetchcraft/node_parser/: base.py  hierarchical.py
src/fetchcraft/retriever/: base.py  object_retriever.py  vector_index_retriever.py
src/fetchcraft/source/: __init__.py  base.py  docling_parser.py  filesystem.py  pymupdf4llm_parser.py
src/fetchcraft/vector_store/: __init__.py  base.py  chroma_filter_translator.py  chroma_store.py  qdrant_store.py
src/rag_framework/: __init__.py  node.py  parser.py  vector_index.py
src/rag_framework/agents/: __init__.py  base.py  memory.py  react_agent.py  retriever_tool.py  utils.py
src/rag_framework/embeddings/: __init__.py  base.py  openai.py
src/rag_framework/retriever/: base.py  vector_index_retriever.py
src/rag_framework/vector_store/: base.py  qdrant_store.py
src/tests/: README.md  conftest.py  test_hybrid_search.py  test_node_persistence.py  test_parser_docstore_integration.py  test_retriever.py  test_suite.py  test_symnode.py
src/tests/examples/: multiple_indices_example.py  parser_example.py  test_node_persistence.py
tests/: README.md  conftest.py  test_evaluation.py  test_file_search_tool.py  test_filesystem_document_source.py  test_filters.py  test_filters_chroma.py  test_hash_update.py  test_hierarchical_node_parser.py  test_hybrid_search.py  test_mongodb_store.py  test_node_persistence.py  test_retriever.py  test_simple_node_parser.py  test_suite.py  test_symnode.py
