[project]
name = "fetchcraft"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fetchcraft-core",
    "fetchcraft-openai-server",
    "fetchcraft-openapi-server",
    "fetchcraft-mcp-server",
    "fetchcraft-parsing-docling",
    "fetchcraft-ingestion-admin",
    "fetchcraft-gradio-chatbot",
    "fetchcraft-hybrid-search",
    "llama-index-llms-openai-like>=0.5.3",
]

[tool.uv]

[tool.uv.workspace]
members = [
    "packages/fetchcraft-core",
    "packages/fetchcraft-parsing-docling",
    "fetchcraft-demos/fetchcraft-openapi-server",
    "fetchcraft-demos/fetchcraft-gradio-chatbot",
    "fetchcraft-demos/fetchcraft-hybrid-search",
    "fetchcraft-demos/fetchcraft-openai-server",
    "fetchcraft-demos/fetchcraft-mcp-server",
    "packages/fetchcraft-ingestion-admin",
]

[tool.uv.sources]
fetchcraft-core = { workspace = true }
fetchcraft-parsing-docling = { workspace = true }
fetchcraft-openapi-server = { workspace = true }
fetchcraft-openai-server = { workspace = true }
fetchcraft-mcp-server = { workspace = true }
fetchcraft-ingestion-admin = { workspace = true }
fetchcraft-gradio-chatbot = { workspace = true }
fetchcraft-hybrid-search = { workspace = true }

