[project]
name = "fetchcraft"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fetchcraft-core",
    "fetchcraft-parsing-docling",
    "fetchcraft-admin",
    "fetchcraft-mcp-server",
]

[tool.uv]

[tool.uv.workspace]
members = [
    "packages/fetchcraft-core",
    "packages/fetchcraft-parsing-docling",
    "packages/fetchcraft-admin",
    "packages/fetchcraft-mcp-server",
]

[tool.uv.sources]
fetchcraft-core = { workspace = true }
fetchcraft-parsing-docling = { workspace = true }
fetchcraft-admin = { workspace = true }
fetchcraft-mcp-server = { workspace = true }

