[project]
name = "fetchcraft-gradio-chatbot"
version = "0.1.0"
description = "Fetchcraft demo using a simple Gradio UI"
requires-python = ">=3.12"
dependencies = [
  "fetchcraft-core",
  "gradio>=5.49.1",
]

[project.scripts]
fetchcraft-openai-server = "fetchcraft.demos.gradio.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]
#only-include = [
#    "src/fetchcraft/openai/",
#]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }

