[project]
name = "fetchcraft-mcp-server"
version = "0.1.0"
description = "MCP server for Fetchcraft"
requires-python = ">=3.12"
dependencies = [
  "fetchcraft-core",
  "mcp",
]

[project.scripts]
fetchcraft-mcp-server = "fetchcraft.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }
