[project]
name = "fetchcraft-mcp-server"
version = "0.2.0"
description = "MCP server for Fetchcraft"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastmcp>=2.13.0.2",
  "fetchcraft-core",
  "pydantic-settings>=2.11.0",
]

[project.scripts]
fetchcraft-mcp-server = "fetchcraft.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }
