[project]
name = "fetchcraft-openai-server"
version = "0.4.0"
description = "OpenAI-based server for Fetchcraft"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fetchcraft-core",
]

[project.scripts]
fetchcraft-openai-server = "fetchcraft.demos.openai.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]
#only-include = [
#    "src/fetchcraft/openai/",
#]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }

