[project]
name = "fetchcraft-openapi-server"
version = "0.2.0"
description = "OpenAPI-based server for Fetchcraft"
requires-python = ">=3.12"
dependencies = [
  "fetchcraft-core",
  "jinja2>=3.1.6",
]

[project.scripts]
fetchcraft-openapi-server = "fetchcraft.demos.openapi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]
#only-include = [
#    "src/fetchcraft/openai/",
#]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }

