[project]
name = "fetchcraft-simple"
version = "0.1.0"
description = "Fetchcraft simple demo"
requires-python = ">=3.12"
dependencies = [
  "fetchcraft-core",
]

[project.scripts]
fetchcraft-openai-server = "fetchcraft.demos.simple.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fetchcraft/"]
#only-include = [
#    "src/fetchcraft/openai/",
#]

[tool.uv]
src-layout = true

[tool.uv.sources]
fetchcraft-core = { workspace = true }

